--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ excellence in the IT and software industry.
                   <br>
                   <br>
                 
-                  <a href="https://drive.google.com/file/d/19pNvsaIqNugKhs-0cQv6wn7S6mrXEDD2/view?usp=share_link" target="_blank" class="projects__button">
+                  <a href="https://drive.google.com/file/d/1EChDU6JGQajG1QCT-UhAjlZM-dLum7ce/view?usp=sharing" target="_blank" class="projects__button">
                     View Certificate <i class="ri-arrow-right-line"></i>
                   </a>
                   <br>
