--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               <div class="home__blob grid">
                 <div class="home__perfil">
                   <img
-                    src="assets/img/shiva.jpg"
+                    src="assets/img/Shiva1.png"
                     alt="home profile"
                     srcset=""
                   />
